antlr-3.4/generics.txt
warning: [options] bootstrap class path not set in conjunction with -source 1.3
./runtime/Java/src/main/java/org/antlr/runtime/BufferedTokenStream.java:57: error: generics are not supported in -source 1.3
    protected List<Token> tokens = new ArrayList<Token>(100);
                  ^
  (use -source 5 or higher to enable generics)
./runtime/Java/src/main/java/org/antlr/runtime/UnbufferedTokenStream.java:50: error: generics are not supported in -source 1.3
public class UnbufferedTokenStream extends LookaheadStream<Token> implements TokenStream {
                                                          ^
  (use -source 5 or higher to enable generics)
./runtime/Java/src/main/java/org/antlr/runtime/debug/Profiler.java:129: error: generics are not supported in -source 1.3
	protected Set<String> uniqueRules = new HashSet<String>();
	             ^
  (use -source 5 or higher to enable generics)
./runtime/Java/src/main/java/org/antlr/runtime/debug/Profiler.java:207: error: annotations are not supported in -source 1.3
	@Override
	 ^
  (use -source 5 or higher to enable annotations)
./runtime/Java/src/main/java/org/antlr/runtime/debug/Profiler.java:392: error: for-each loops are not supported in -source 1.3
		for (DecisionEvent e : decisionEvents) {
		                     ^
  (use -source 5 or higher to enable for-each loops)
./runtime/Java/src/main/java/org/antlr/runtime/misc/DoubleKeyMap.java:9: error: generics are not supported in -source 1.3
public class DoubleKeyMap<Key1, Key2, Value> {
                         ^
  (use -source 5 or higher to enable generics)
./runtime/Java/src/main/java/org/antlr/runtime/misc/DoubleKeyMap.java:55: error: for-each loops are not supported in -source 1.3
		for (Map<Key2, Value> k2 : data.values()) {
		                         ^
  (use -source 5 or higher to enable for-each loops)
./runtime/Java/src/main/java/org/antlr/runtime/misc/FastQueue.java:44: error: generics are not supported in -source 1.3
public class FastQueue<T> {
                      ^
  (use -source 5 or higher to enable generics)
./runtime/Java/src/main/java/org/antlr/runtime/misc/LookaheadStream.java:39: error: generics are not supported in -source 1.3
public abstract class LookaheadStream<T> extends FastQueue<T> {
                                     ^
  (use -source 5 or higher to enable generics)
./runtime/Java/src/main/java/org/antlr/runtime/misc/Stats.java:114: error: generics are not supported in -source 1.3
	public static double avg(List<Integer> X) {
	                             ^
  (use -source 5 or higher to enable generics)
./runtime/Java/src/main/java/org/antlr/runtime/tree/CommonTreeNodeStream.java:37: error: generics are not supported in -source 1.3
public class CommonTreeNodeStream extends LookaheadStream<Object> implements TreeNodeStream {
                                                         ^
  (use -source 5 or higher to enable generics)
11 errors
1 warning
